--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
   <groupId>com.dubbo</groupId>
   <artifactId>mydubbo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>mydubbo</name>
   <url>http://maven.apache.org</url>
-
+  <description>我的第一个Dubbo项目! 2019.7.24 D2C</description>
+   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -22,4 +23,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <modules>
+  	<module>dubbo-provider</module>
+  	<module>dubbo-customer</module>
+  </modules>
 </project>
